--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,10 +6,20 @@
   position: relative;
 }
 
-#nav {
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 40px;
+}
+
+.content .nav, .content .footer {
+  width: 100%;
+  background-color: #01225e;
+  color: #fff;
+}
+
+.content .nav {
   z-index: 1;
   position: fixed;
-  width: 100%;
   height: 30px;
   top: 0;
   left: 0;
@@ -23,31 +33,67 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #01225e;
 }
 
-#nav a {
-  color: #fff;
+.content .nav a {
   margin: 5px;
   text-decoration: none;
+  color: #fff;
 }
 
-#content {
+.content .section {
   width: 40%;
-  margin: auto;
-}
-
-#content .chapter {
-  margin-top: 40px;
+  margin: 40px auto 20px;
 }
 
 @media (max-width: 992px) {
-  #content {
+  .content .section {
     width: 90%;
   }
 }
 
-#content h2 {
+.content .section .section-header {
   margin: 20px 0;
+}
+
+.content .section .section-content {
+  text-align: justify;
+}
+
+@media (max-width: 992px) {
+  .content .section .section-content {
+    text-align: left;
+  }
+}
+
+.content form {
+  background-color: #c4bebe;
+  width: 50%;
+  margin: 50px auto;
+  padding: 20px;
+}
+
+.content form input {
+  margin: 3px;
+  padding: 3px;
+}
+
+.content form button {
+  outline: none;
+  padding: 3px;
+  margin: 3px;
+  border-radius: 5px;
+}
+
+.content .footer {
+  padding: 10px;
+}
+
+.content .footer ul {
+  padding-left: 20px;
+}
+
+.content .footer ul li {
+  list-style-type: none;
 }
 /*# sourceMappingURL=stylesheet.css.map */
